--- a/package.json
+++ b/package.json
@@ -1,62 +1,32 @@
 {
-  "name": "tdd-starter",
+  "name": "advent-of-code-2021",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "jest": "jest",
+    "test": "jest",
     "lint": "eslint --fix './**'",
     "format": "prettier --write .",
     "typecheck": "tsc -p ./tsconfig.json",
-    "cypress": "cypress open",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "next": "10.2.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-query": "^3.16.0"
-  },
   "devDependencies": {
-    "@cypress/react": "^5.5.0",
-    "@cypress/webpack-dev-server": "^1.1.6",
-    "@testing-library/cypress": "^7.0.6",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@types/jest": "^26.0.23",
-    "@types/node": "^15.0.2",
-    "@types/react": "^17.0.5",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "cypress": "^7.2.0",
-    "eslint": "^7.25.0",
-    "eslint-config-airbnb": "^18.2.1",
+    "@types/jest": "^27.0.3",
+    "@types/node": "^16.11.12",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-cypress": "^2.11.3",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jest-dom": "^3.8.1",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
-    "eslint-plugin-react": "^7.23.2",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-prettier": "^4.0.0",
     "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "jest-css-modules": "^2.1.0",
-    "prettier": "^2.2.1",
-    "ts-jest": "^26.5.6",
+    "jest": "^27.4.3",
+    "prettier": "^2.5.1",
+    "ts-jest": "^27.1.0",
     "tsc": "^2.0.3",
-    "typescript": "^4.2.4"
-  },
-  "jest": {
-    "moduleNameMapper": {
-      "\\.module\\.css$": "<rootDir>/node_modules/jest-css-modules"
-    }
+    "typescript": "^4.5.2"
   },
   "engines": {
-    "node": "14"
+    "node": "16"
   }
 }
