--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint --fix './**'",
     "format": "prettier --write .",
     "typecheck": "tsc -p ./tsconfig.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "devDependencies": {
     "@types/jest": "^27.0.3",
@@ -20,12 +21,20 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^6.0.0",
     "jest": "^27.4.3",
+    "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.0",
-    "tsc": "^2.0.3",
     "typescript": "^4.5.2"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "pnpm run lint",
+      "pnpm run format",
+      "pnpm run typecheck"
+    ]   
   },
   "engines": {
     "node": "18"
-  }
+  },
+  "license": "ISC"
 }
