--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "jest",
     "lint": "eslint --fix './**'",
     "format": "prettier --write .",
-    "typecheck": "tsc -p ./tsconfig.json",
+    "typecheck": "tsc --noEmit --esModuleInterop",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
@@ -20,10 +20,10 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^6.0.0",
-    "jest": "^27.4.3",
+    "jest": "^29.2.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
-    "ts-jest": "^27.1.0",
+    "ts-jest": "^29.0.3",
     "typescript": "^4.5.2"
   },
   "lint-staged": {
@@ -31,7 +31,7 @@
       "pnpm run lint",
       "pnpm run format",
       "pnpm run typecheck"
-    ]   
+    ]
   },
   "engines": {
     "node": "18"
