--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": false,
   "scripts": {
     "test": "jest",
-    "lint": "eslint --fix './**'",
-    "format": "prettier --write .",
+    "lint": "eslint --fix",
+    "format": "prettier --write",
     "typecheck": "tsc --noEmit --esModuleInterop",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
