--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
     "test": "jest",
     "lint": "eslint --fix",
     "format": "prettier --write",
-    "typecheck": "tsc --noEmit --esModuleInterop",
+    "typecheck": "tsc --noEmit --esModuleInterop --target es2015 --moduleResolution node",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
   "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "@types/node": "^16.11.12",
+    "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
@@ -24,7 +24,7 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.5.1",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.5.2"
+    "typescript": "4.9.4"
   },
   "lint-staged": {
     "*.ts": [
