--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
+    "target": "ESNext",
     "lib": ["esnext"],
     "noImplicitAny": true,
     "noImplicitThis": true,
