--- a/tsconfig.jest.json
+++ b/tsconfig.jest.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["esnext"],
+    "lib": ["ESNext"],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "strictNullChecks": true,
